<resources>
    <string name="app_name">MinTone</string>
    <string name="text_subheader">Preset Frequencies</string>
    <string name="text_off">Play</string>
    <string name="text_on">Pause</string>
    <string name="text_pick_value">Enter Value Manually</string>
    <string name="text_set_manually">Set Freq Manually</string>
    <string name="text_subheader2">Volume</string>
    <string name="text_subheader3">Frequency</string>
    <string name="text_using_preset">Preset</string>
    <string name="conf_file_name">MinTone.conf</string>
    <string name="text_continuous_playback">Loop?</string>
</resources>
